Add favicon.ico to the public logo directory

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mascot Survey</title>
+    <link rel="icon" type="image/x-icon" href="/public/logo/favicon.ico">
   </head>
   <body class="bg-gray-100">
     <div id="root"></div>
