Add preconnect optimization for notso.ai redirect
- Added preconnect and dns-prefetch links to notso.ai
- This will speed up the redirect by establishing connection early
- Reduces loading time when users are redirected after survey completion

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mascot Survey</title>
     <link rel="icon" type="image/x-icon" href="/public/logo/favicon.ico">
+    <!-- Preconnect to notso.ai for faster redirect -->
+    <link rel="preconnect" href="https://notso.ai">
+    <link rel="dns-prefetch" href="//notso.ai">
   </head>
   <body class="bg-gray-100">
     <div id="root"></div>
