--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mascot Survey</title>
+    <title>Mascot Survey | Notso AI</title>
     <link rel="icon" type="image/x-icon" href="/public/logo/favicon.ico">
     <!-- Preconnect to notso.ai for faster redirect -->
-    <link rel="preconnect" href="https://notso.ai">
-    <link rel="dns-prefetch" href="//notso.ai">
-  </head>
-  <body class="bg-gray-100">
+    <link rel="preconnect" href="https://www.notso.ai">
+    <link rel="dns-prefetch" href="https://www.notso.ai">
+</head>
+
+<body class="bg-gray-100">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+</body>
+
 </html>
