Fix JavaScript Standard Style linting errors
- Removed unused top-level disableSubmission and disableCaptcha variables
- These variables were being redeclared inside useEffect where they're actually used
- All linting errors resolved

--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mascot Survey | Notso AI</title>
-    <link rel="icon" type="image/x-icon" href="/public/logo/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/public/logo/favicon.ico" />
     <!-- Preconnect to notso.ai for faster redirect -->
-    <link rel="preconnect" href="https://www.notso.ai">
-    <link rel="dns-prefetch" href="https://www.notso.ai">
-</head>
+    <link rel="preconnect" href="https://www.notso.ai" />
+    <link rel="dns-prefetch" href="https://www.notso.ai" />
+  </head>
 
-<body class="bg-gray-100">
+  <body class="bg-gray-100">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-</body>
-
+  </body>
 </html>
