Refactor PostCSS configuration and update styles
- Updated postcss.config.cjs to use require for plugins.
- Removed index.css and replaced it with styles.css for Tailwind imports.
- Updated main.jsx to import styles from styles.css instead of index.css.
- Cleaned up vite.config.js by removing unnecessary comments.
- Enhanced vitest.config.js to exclude specific files from coverage.
- Added copilot instructions to use PNPM.
- Created a new test file for main.jsx to mock rendering and test root element handling.
- Added styles.css to import Tailwind CSS.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mascot Survey | Notso AI</title>
     <link rel="icon" type="image/x-icon" href="/logo/favicon.ico" />
+    <link href="/src/styles.css" rel="stylesheet">
     <!-- Preconnect to notso.ai for faster redirect -->
     <link rel="preconnect" href="https://www.notso.ai" />
     <link rel="dns-prefetch" href="https://www.notso.ai" />
